refacto + tests available square basics + test chip turn black on adding black chip right to black and white chip

--- a/src/Components/PlayingArea/Chip/Chip.scss
+++ b/src/Components/PlayingArea/Chip/Chip.scss
@@ -18,3 +18,11 @@
 .empty-chip {
   border: none;
 }
+
+.available-chip {
+  width: 20px;
+  height: 20px;
+  background-color: $available-chip;
+  margin: auto;
+  margin-top: 39px;
+}
